[gd_scene load_steps=2 format=3 uid="uid://cgfhnxt8x9wb2"]

[ext_resource type="Script" path="res://Tests/QuantumForceGraphTest.gd" id="1_gd8x0"]

[node name="QuantumForceGraphTest" type="Control"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("1_gd8x0")

[node name="QuantumForceGraph" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchors_left = 0.5
anchors_top = 0.0
anchor_left = 0.5
offset_left = -250.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 50.0
text = "âš›ï¸ Quantum Force Graph - Colorful Qubits âš›ï¸"

[node name="InfoPanel" type="PanelContainer" parent="UI"]
offset_left = 10.0
offset_top = 60.0
offset_right = 350.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="UI/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InfoPanel/MarginContainer"]
layout_mode = 2

[node name="PanelTitle" type="Label" parent="UI/InfoPanel/MarginContainer/VBoxContainer"]
text = "ğŸ“Š Qubit Metrics"

[node name="QubitCountLabel" type="Label" parent="UI/InfoPanel/MarginContainer/VBoxContainer"]
text = "Qubits: â”€â”€â”€â”€"

[node name="EntanglementLabel" type="Label" parent="UI/InfoPanel/MarginContainer/VBoxContainer"]
text = "Entangled: â”€â”€â”€â”€"

[node name="CoherenceLabel" type="Label" parent="UI/InfoPanel/MarginContainer/VBoxContainer"]
text = "Avg Coherence: â”€â”€â”€â”€"

[node name="LegendPanel" type="PanelContainer" parent="UI"]
offset_left = 10.0
offset_top = 210.0
offset_right = 350.0
offset_bottom = 380.0

[node name="MarginContainer2" type="MarginContainer" parent="UI/LegendPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/LegendPanel/MarginContainer2"]
layout_mode = 2

[node name="LegendTitle" type="Label" parent="UI/LegendPanel/MarginContainer2/VBoxContainer2"]
text = "ğŸ“– Legend"

[node name="NodeLabel" type="Label" parent="UI/LegendPanel/MarginContainer2/VBoxContainer2"]
text = "ğŸ”µ Colorful nodes = Qubits"
custom_minimum_size = Vector2(0, 25)

[node name="SizeLabel" type="Label" parent="UI/LegendPanel/MarginContainer2/VBoxContainer2"]
text = "ğŸ“ Size = Coherence"
custom_minimum_size = Vector2(0, 25)

[node name="EdgeLabel" type="Label" parent="UI/LegendPanel/MarginContainer2/VBoxContainer2"]
text = "ğŸŒ€ Lines = Entanglement"
custom_minimum_size = Vector2(0, 25)

[node name="PulseLabel" type="Label" parent="UI/LegendPanel/MarginContainer2/VBoxContainer2"]
text = "âœ¨ Pulse = Dynamics"
custom_minimum_size = Vector2(0, 25)
